Bug 234670 - Font for Favorite Folders and folders list is not updated when it is changed in System Settings
Summary: Font for Favorite Folders and folders list is not updated when it is changed ...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-18 03:04 UTC by Raphael Kubo da Costa
Modified: 2011-09-08 08:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2010-04-18 03:04:46 UTC
Version:            (using Devel)
Installed from:    Compiled sources

When I change my default fonts in System Settings -> Appearance -> Fonts, it is updated in all running applications.

In KMail, however, only fonts in the toolbar, menus and message list are updated accordingly. The folders list and the favorite folders list still display the use the previous font.

If I launch KMail's settings dialog and simply click OK, they are updated. Custom fonts are not enabled.
Comment 1 Laurent Montel 2011-09-08 08:23:10 UTC
Git commit 42333b22433f44484b1938acdc0beb9fbb9c27f8 by Montel Laurent.
Committed on 08/09/2011 at 10:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 234670 - Font for Favorite Folders and folders list is not updated when it is changed in System Settings

FIXED-IN: 4.7.2
BUG: 234670

M  +9    -1    mailcommon/foldertreewidget.cpp
M  +2    -0    mailcommon/foldertreewidget.h

http://commits.kde.org/kdepim/42333b22433f44484b1938acdc0beb9fbb9c27f8
Comment 2 Laurent Montel 2011-09-08 08:23:55 UTC
Git commit d5bd05694346ce29405e9af2b892993fa57c3d07 by Montel Laurent.
Committed on 08/09/2011 at 10:21.
Pushed by mlaurent into branch '4.7'.

Fix Bug 234670 - Font for Favorite Folders and folders list is not updated when it is changed in System Settings

FIXED-IN: 4.7.2
BUG: 234670
(cherry picked from commit 42333b22433f44484b1938acdc0beb9fbb9c27f8)

M  +9    -1    mailcommon/foldertreewidget.cpp
M  +2    -0    mailcommon/foldertreewidget.h

http://commits.kde.org/kdepim/d5bd05694346ce29405e9af2b892993fa57c3d07