Fix Bug 234670 - Font for Favorite Folders and folders list is not updated when it is changed in System Settings

FIXED-IN: 4.7.2
BUG: 234670